--- a/templets/forgotpass.html
+++ b/templets/forgotpass.html
@@ -8,6 +8,7 @@
         {% if typ == "new" %}
         <div class="new">
             <form>
+                {% csrf_token %}
                 <div class="mb-3">
                     <label for="uname" class="form-label">UserName</label>
                     <input type="text" disabled value="{{uname}}" class="form-control" id="uname">
@@ -18,14 +19,15 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <input type="password" class="form-control" id="cpass">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" id="sub" class="btn btn-primary">Submit</button>
             </form>
         </div>
         {% elif typ == "old" %}
         <div class="old">
             <form>
+                {% csrf_token %}
                 <div class="mb-3">
                     <label for="uname" class="form-label">UserName</label>
                     <input type="text" disabled value="{{uname}}" class="form-control" id="uname">
@@ -38,12 +40,13 @@
                     <label for="cpass" class="form-label">Confirm Password</label>
                     <input type="password" class="form-control" id="cpass">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" id="sub" class="btn btn-primary">Submit</button>
             </form>
         </div>
         {% else %}
         <div class="defult">
             <form>
+                {% csrf_token %}
                 <div class="mb-3">
                     <label for="uname" class="form-label">UserName</label>
                     <input type="text" class="form-control" id="uname">
@@ -56,7 +59,7 @@
                     <label for="cpass" class="form-label">Confirm Password</label>
                     <input type="password" class="form-control" id="cpass">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" id="sub" class="btn btn-primary">Submit</button>
             </form>
         </div>
         {% endif %}
@@ -65,6 +68,23 @@
 {% endblock %}
 {% block script %}
 <script>
-    // btnclk('h1', () => { alert('Startr Js Work!') })
+    btnclk('#sub', () => { 
+        Ajax({
+            url: "{% url 'cng_pass' %}",
+            method: "POST",
+            data: {
+                csrfmiddlewaretoken: getVal('input[name=csrfmiddlewaretoken]'),
+                uname: getVal('input[id=uname]'),
+                pass: getVal('input[id=pass]'),
+                cpass: getVal('input[id=cpass]'),
+            },
+            success: (respons) => {
+                console.log(respons)
+            },
+            error: (respons) => {
+                console.log(respons)
+            }
+        })
+     })
 </script>
 {% endblock %}
