--- a/templets/login.html
+++ b/templets/login.html
@@ -15,7 +15,7 @@
                 <div class="mb-3 col-auto">
                     <label for="pass" class="form-label">Password</label>
                     <input type="password" placeholder="********" autocomplete="off" class="form-control" id="pass">
-                    <div class="mt-2"><a href="#" class="mt-5" style="text-decoration: none;">Forgot your Password</a>
+                    <div class="mt-2"><a href="{% url 'forgot-pass' %}" class="mt-5" style="text-decoration: none;">Forgot your Password</a>
                     </div>
                 </div>
                 <button id="sub_btn" type="button" class="btn btn-primary">Login</button>
